# Smart_Environmental_Data_Logger

./: .gitignore  CMakeLists.txt  README.md  build_guide.md  partitions.csv  project_readme.md  sdkconfig.defaults  verify_files.py
components/app_wifi/: CMakeLists.txt  app_wifi.c
components/app_wifi/include/: app_wifi.h
components/dht11/: CMakeLists.txt  dht11.c  dht11.h
components/ssd1306/: CMakeLists.txt  font8x8_basic.h  ssd1306.c  ssd1306.h
docs/: circuit_diagram_md.md
main/: CMakeLists.txt  Kconfig.projbuild  alert_task.c  alert_task.h  app_driver.c  app_driver.h  app_main.c  cloud_task.c  cloud_task.h  display_task.c  display_task.h  ota_task.c  ota_task.h  project_config.h  sensor_task.c  sensor_task.h
